--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
 </head>
 <body>
     <p class="pClase">Clase 11 GITHUB</p>
+    <div class="dad">
+        <div class="son item1"></div>
+        <div class="son item2"></div>
+        <div class="son item3"></div>
+        <div class="son item4"></div>
+    </div>
 </body>
 </html>
