haciendo merge en master

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 <body>
     <p class="pClase">Clase 11 GITHUB</p>
+    <h1>Merge</h1>
+    <ul>
+    <li>Home</li>
+    <li>Home</li>
+    <li>Home</li>
+    <li>Home</li>
+</ul>
     <div class="dad">
         <div class="son item1"></div>
         <div class="son item2"></div>
