--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
         <div class="son item3"></div>
         <div class="son item4"></div>
     </div>
+    <footer>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores, iste.</p>
+    </footer>
 </body>
 </html>
