Modificación de UL

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <h1>Merge</h1>
     <ul>
     <li>Home</li>
-    <li>Home</li>
-    <li>Home</li>
-    <li>Home</li>
+    <li>Nosotros</li>
+    <li>Servicios</li>
+    <li>Contacto</li>
 </ul>
     <div class="dad">
         <div class="son item1"></div>
